# sxd-document

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md  xml-grammar.txt
.github/workflows/: ci.yml
compatibility-tests/benchmarks/: Cargo.toml
compatibility-tests/benchmarks/benches/: string_pool.rs
compatibility-tests/compile-fail/: Cargo.toml
compatibility-tests/compile-fail/tests/ui/: string_pool.rs  string_pool.stderr  thindom.rs  thindom.stderr
src/: dom.rs  dom4.rs  lazy_hash_map.rs  lib.rs  nodeset.rs  parser.rs  peresil.rs  raw.rs  str.rs  str_ext.rs  string_pool.rs  thindom.rs  thindom4.rs  writer.rs
src/parser/: mod.rs  xmlstr.rs
