[package]
name = "sxd-document"
version = "0.3.2"
authors = ["Jake Goulding <jake.goulding@gmail.com>"]

description = "A Rust XML DOM library"
readme = "README.md"
keywords = ["xml"]

repository = "https://github.com/shepmaster/sxd-document"
documentation = "https://docs.rs/sxd-document"

license = "MIT"

edition = "2018"

[features]
compile_failure = []
unstable = []

[dependencies]
peresil = "0.3.0"
typed-arena = "1.0"
