[package]
name = "sxd-document"
version = "0.3.2"
authors = ["Jake Goulding <jake.goulding@gmail.com>"]
edition = "2018"
rust-version = "1.56"

description = "A Rust XML DOM library"
readme = "README.md"
keywords = ["xml"]

repository = "https://github.com/shepmaster/sxd-document"
documentation = "https://docs.rs/sxd-document"

license = "MIT"

[features]
__internal_expose_string_pool = []

[dependencies]
peresil = "0.3.0"
typed-arena = "2.0"
